--- a/portfolio.html
+++ b/portfolio.html
@@ -49,113 +49,110 @@
     </header>
     <main>
       <!-- Buttons -->
-      <section>
-        <div>
-          <ul>
-            <li>
-              <button type="button">Все</button>
+      <section class="project container">
+        <div class="container">
+          <ul class="filter-button-list">
+            <li class="filter-button-item">
+              <button type="button" class="filter-button">Все</button>
             </li>
-            <li>
-              <button type="button">Веб-сайты</button>
+            <li class="filter-button-item">
+              <button type="button" class="filter-button">Веб-сайты</button>
             </li>
-            <li>
-              <button type="button">Приложения</button>
+            <li class="filter-button-item">
+              <button type="button" class="filter-button">Приложения</button>
             </li>
-            <li>
-              <button type="button">Дизайн</button>
+            <li class="filter-button-item">
+              <button type="button" class="filter-button">Дизайн</button>
             </li>
-            <li>
-              <button type="button">Маркетинг</button>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section>
-        <div>
-          <ul>
-            <li>
-              <img
-                src="./images.portfolio/img-1.jpg"
-                alt="Пример Проекта"
-                width="370"
-              />
-              <h1>Технокряк</h1>
-              <p>Веб-сайт</p>
-            </li>
-            <li>
-              <img
-                src="./images.portfolio/img-2.jpg"
-                alt="Пример Проекта 2"
-                width="370"
-              />
-              <h1>Постер New Orlean vs Golden Star</h1>
-              <p>Дизайн</p>
-            </li>
-            <li>
-              <img
-                src="./images.portfolio/img-3.jpg"
-                alt="Пример Проекта 3"
-                width="370"
-              />
-              <h1>Ресторан Seafood</h1>
-              <p>Приложение</p>
-            </li>
-            <li>
-              <img
-                src="./images.portfolio/img-4.jpg"
-                alt="Пример Проекта 4"
-                width="370"
-              />
-              <h1>Проект Prime</h1>
-              <p>Маркетинг</p>
-            </li>
-            <li>
-              <img
-                src="./images.portfolio/img-5.jpg"
-                alt="Пример Проекта 5"
-                width="370"
-              />
-              <h1>Проект Boxes</h1>
-              <p>Приложение</p>
-            </li>
-            <li>
-              <img
-                src="./images.portfolio/img-6.jpg"
-                alt="Пример Проекта 6"
-                width="370"
-              />
-              <h1>Inspiration has no Borders</h1>
-              <p>Веб-сайт</p>
-            </li>
-            <li>
-              <img
-                src="./images.portfolio/img-7.jpg"
-                alt="Пример Проекта 7"
-                width="370"
-              />
-              <h1>Издание Limited Edition</h1>
-              <p>Дизайн</p>
-            </li>
-            <li>
-              <img
-                src="./images.portfolio/img-8.jpg"
-                alt="Пример Проекта 8"
-                width="370"
-              />
-              <h1>Проект LAB</h1>
-              <p>Маркетинг</p>
-            </li>
-            <li>
-              <img
-                src="./images.portfolio/img-9.jpg"
-                alt="Пример Проекта 9"
-                width="370"
-              />
-              <h1>Growing Business</h1>
-              <p>Приложение</p>
+            <li class="filter-button-item">
+              <button type="button" class="filter-button">Маркетинг</button>
             </li>
           </ul>
         </div>
+        <!-- list of cells -->
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
+            <img
+              src="./images.portfolio/img-1.jpg"
+              alt="Пример Проекта"
+              width="370"
+            />
+            <h2 class="portfolio-name">Технокряк</h2>
+            <p class="portfolio-text">Веб-сайт</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              src="./images.portfolio/img-2.jpg"
+              alt="Пример Проекта 2"
+              width="370"
+            />
+            <h2 class="portfolio-name">Постер New Orlean vs Golden Star</h2>
+            <p class="portfolio-text">Дизайн</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              src="./images.portfolio/img-3.jpg"
+              alt="Пример Проекта 3"
+              width="370"
+            />
+            <h2 class="portfolio-name">Ресторан Seafood</h2>
+            <p class="portfolio-text">Приложение</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              src="./images.portfolio/img-4.jpg"
+              alt="Пример Проекта 4"
+              width="370"
+            />
+            <h2 class="portfolio-name">Проект Prime</h2>
+            <p class="portfolio-text">Маркетинг</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              src="./images.portfolio/img-5.jpg"
+              alt="Пример Проекта 5"
+              width="370"
+            />
+            <h2 class="portfolio-name">Проект Boxes</h2>
+            <p class="portfolio-text">Приложение</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              src="./images.portfolio/img-6.jpg"
+              alt="Пример Проекта 6"
+              width="370"
+            />
+            <h2 class="portfolio-name">Inspiration has no Borders</h2>
+            <p class="portfolio-text">Веб-сайт</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              src="./images.portfolio/img-7.jpg"
+              alt="Пример Проекта 7"
+              width="370"
+            />
+            <h2 class="portfolio-name">Издание Limited Edition</h2>
+            <p class="portfolio-text">Дизайн</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              src="./images.portfolio/img-8.jpg"
+              alt="Пример Проекта 8"
+              width="370"
+            />
+            <h2 class="portfolio-name" 1>Проект LAB</h2>
+            <p class="portfolio-text">Маркетинг</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              src="./images.portfolio/img-9.jpg"
+              alt="Пример Проекта 9"
+              width="370"
+            />
+            <h2 class="portfolio-name">Growing Business</h2>
+            <p class="portfolio-text">Приложение</p>
+          </li>
+        </ul>
       </section>
     </main>
     <!-- FOOTER -->
