photo path updated

--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
             </li>
             <li>
               <img
-                src="./images/UI UX.jpg"
+                src="./images/UI-UX.jpg"
                 alt="разработка мобильныx приложений"
                 width="370"
               />
             </li>
             <li>
               <img
-                src="./images/веб-дизайн.jpg"
+                src="./images/web-designer.jpg"
                 alt="веб дизайнер работaет с цветами"
                 width="370"
               />
