--- a/portfolio.html
+++ b/portfolio.html
@@ -77,8 +77,10 @@
               alt="Пример Проекта"
               width="370"
             />
-            <h2 class="portfolio-name">Технокряк</h2>
-            <p class="portfolio-text">Веб-сайт</p>
+            <div class="portfolio-unit">
+              <h2 class="portfolio-name">Технокряк</h2>
+              <p class="portfolio-text">Веб-сайт</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -86,8 +88,10 @@
               alt="Пример Проекта 2"
               width="370"
             />
-            <h2 class="portfolio-name">Постер New Orlean vs Golden Star</h2>
-            <p class="portfolio-text">Дизайн</p>
+            <div class="portfolio-unit">
+              <h2 class="portfolio-name">Постер New Orlean vs Golden Star</h2>
+              <p class="portfolio-text">Дизайн</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -95,8 +99,10 @@
               alt="Пример Проекта 3"
               width="370"
             />
-            <h2 class="portfolio-name">Ресторан Seafood</h2>
-            <p class="portfolio-text">Приложение</p>
+            <div class="portfolio-unit">
+              <h2 class="portfolio-name">Ресторан Seafood</h2>
+              <p class="portfolio-text">Приложение</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -104,8 +110,10 @@
               alt="Пример Проекта 4"
               width="370"
             />
-            <h2 class="portfolio-name">Проект Prime</h2>
-            <p class="portfolio-text">Маркетинг</p>
+            <div class="portfolio-unit">
+              <h2 class="portfolio-name">Проект Prime</h2>
+              <p class="portfolio-text">Маркетинг</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -113,8 +121,10 @@
               alt="Пример Проекта 5"
               width="370"
             />
-            <h2 class="portfolio-name">Проект Boxes</h2>
-            <p class="portfolio-text">Приложение</p>
+            <div class="portfolio-unit">
+              <h2 class="portfolio-name">Проект Boxes</h2>
+              <p class="portfolio-text">Приложение</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -122,8 +132,10 @@
               alt="Пример Проекта 6"
               width="370"
             />
-            <h2 class="portfolio-name">Inspiration has no Borders</h2>
-            <p class="portfolio-text">Веб-сайт</p>
+            <div class="portfolio-unit">
+              <h2 class="portfolio-name">Inspiration has no Borders</h2>
+              <p class="portfolio-text">Веб-сайт</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -131,8 +143,10 @@
               alt="Пример Проекта 7"
               width="370"
             />
-            <h2 class="portfolio-name">Издание Limited Edition</h2>
-            <p class="portfolio-text">Дизайн</p>
+            <div class="portfolio-unit">
+              <h2 class="portfolio-name">Издание Limited Edition</h2>
+              <p class="portfolio-text">Дизайн</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -140,8 +154,10 @@
               alt="Пример Проекта 8"
               width="370"
             />
-            <h2 class="portfolio-name" 1>Проект LAB</h2>
-            <p class="portfolio-text">Маркетинг</p>
+            <div class="portfolio-unit">
+              <h2 class="portfolio-name" 1>Проект LAB</h2>
+              <p class="portfolio-text">Маркетинг</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -149,8 +165,10 @@
               alt="Пример Проекта 9"
               width="370"
             />
-            <h2 class="portfolio-name">Growing Business</h2>
-            <p class="portfolio-text">Приложение</p>
+            <div class="portfolio-unit">
+              <h2 class="portfolio-name">Growing Business</h2>
+              <p class="portfolio-text">Приложение</p>
+            </div>
           </li>
         </ul>
       </section>
